css/style.css
/* #region Var Colour */

:root {
  --home_active: rgba(210, 210, 210, 1);
  --light: rgba(255, 255, 255, 1);
  --bg_aside: rgba(0, 0, 0, 1);
  --bg_header: rgba(8, 11, 18, 1);
  --bg_main: rgba(20, 25, 34, 1);
  --bg_footer: rgba(40, 40, 40, 1);
  --line_footer: rgba(90, 90, 90, 1);
  --text_aside: rgba(113, 113, 113, 1);
  --text_main: rgba(125, 127, 132, 1);
  --playlist: rgba(163, 163, 163, 1);
  --active: rgba(173, 255, 47, 1);
  --line_footer_light: rgba(193, 193, 193, 1);
  --profile: rgba(128, 128, 128, 1);

}

/* #endregion Var Colour */

/* #region Common */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  font-weight: bold;
}

img {
  max-width: 100%;
  max-height: 100%;
}

ul{
    list-style: none;
}

span{
    display: block;
}

path{
    fill: var(--text_aside);
}
/* #endregion Common */

/* #region Utility */
#site_main {
  height: calc(100vh - 100px);
}

.flex {
  display: flex;
}

.p_relative{
    position: relative;
}

.sidebar {
  width: 260px;
  height: 100%;
  background-color: var(--bg_aside);
  color: var(--text_aside);
  flex-direction: column;
}

.container_main {
  width: calc(100% - 260px);
}

.header {
  height: 100px;
  background-color: var(--bg_header);
}

.main {
  background-color: var(--bg_main);
  height: calc(100% - 100px);
}

footer {
  height: 100px;
  background-color: var(--bg_footer);
}

/* #endregion Utility */

/* #region Aside */

.img_aside {
  width: 150px;
  padding: 28px 0;
  align-content: center;
  margin-left: 20px;
}

.button_aside {
  padding: 5px 0 5px 20px;
  align-items: center;
  gap: 0 10px;
}

.button_aside > svg {
  width: 30px;
}

.active_aside {
  color: var(--light);
  box-shadow: inset 4px 0px var(--active);
}

.active_aside>svg>path{
    fill: var(--home_active);
}

.playlist{
    margin-top: 20px;
    padding-left: 20px;
    flex-direction: column;
    gap: 10px 0px;
}

.square{
    width: 40px;
    height: 40px;
    background-color: var(--playlist);
    justify-content: center;
    align-items: center;
}

.square>i{
    font-size: 25px;
    color: var(--bg_aside);
}

.playlist>h4{
    color: var(--light);
}

.plus_playlist{
    align-items: center;
    gap: 0px 10px;
}

.list_playlist{
    flex-direction: column;
    overflow-x: auto;
    gap: 15px 0;
    margin-top: 10px;
}

.footer_aside{
    width: 100%;
    flex-direction: column;
    padding: 8px 20px;
    gap: 10px 0px;
    position: absolute;
    bottom: 0;
    left: 0;
}

.download_aside{
    gap: 0 10px;
    align-items: center;
}
.download_aside>svg{
    width: 20px;
    margin-left: -3px;
}

.user_aside{
    align-items: center;
    gap: 0 10px;
}
.user_aside>h4{
    color: var(--light);
}
.circle{
    height: 30px;
    width: 30px;
    border-radius: 50%;
    background-color: var(--profile);
    text-align: center;
    background-image: url(../img/profile.svg);
    background-position: top;
}




/* #endregion Aside */

